--- a/deploying-micro-services-in-kubernetes/payment-service/build.gradle
+++ b/deploying-micro-services-in-kubernetes/payment-service/build.gradle
@@ -1,3 +1,5 @@
+[bootJar, bootRun]*.enabled = true
+
 dependencies {
     compile("org.projectlombok:lombok:1.18.0")
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
